# chordview

./: .gitignore  README.md  leadsheets.sqlite  noxfile.py  pyproject.toml
src/: app_layout.py  db.py  main.py  search.py  sidebar.py  tabs.py
tests/: test_db.py
