[tool.poetry]
name = "chordview"
version = "0.1.0"
description = "Visualizing chords on the tone cycle"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
musicir = "^0.0.3"
flet = "^0.1.58"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
nox = "^2022.8.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
