[tool.poetry]
name = "chordview"
version = "0.1.1"
description = "Visualizing chords on the tone cycle"
authors = ["Flávio Codeço Coelho <fccoelho@gmail.com>"]
license = "MIT"
include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.10"
musicir = "^0.0.5"
flet = "^0.1.58"
SQLAlchemy = "^1.4.42"
duckdb = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
nox = "^2022.8.7"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
